<resources>
    <string name="app_name">CST438_Project1</string>

    <!-- Create Account Strings-->
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordReEnterLabel">Re-enter Password</string>
    <string name="accountCreatedMessage">Account Created!</string>
    <string name="createAccountLabel">Create Account</string>

    <!-- Edit User Strings-->
    <string name="saveLabel">Save</string>
    <string name="savedMessage">Changes are saved.</string>

    <!-- Edit Assignment Strings-->
    <string name="editAssignmentLabel"></string>
</resources>